Fix layout spacing and flash messages.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,6 +49,12 @@ html,body{background:none;}
   }
 }
 
+.generic {
+  #main .container {
+    margin-top: 25px;
+  }
+}
+
 .profile {
   #main .container {
     margin-top: 35px;
